# AccedeSimple

./: azure.yaml
.aspire/: settings.json
infra/: main.bicep  main.bicepparam  main.parameters.json
infra/apps/: backend.bicep  localguide.bicep  mcpserver.bicep  webui.bicep
infra/core/ai/: foundry.bicep  openai.bicep
infra/core/containers/: containerapps.bicep
infra/core/monitoring/: monitoring.bicep
infra/core/storage/: blobstorage.bicep
src/AccedeSimple.AppHost/: .gitignore  AccedeSimple.AppHost.csproj  Program.cs
src/AccedeSimple.AppHost/Properties/: launchSettings.json
src/AccedeSimple.MCPServer/: AccedeSimple.MCPServer.csproj  Program.cs
src/AccedeSimple.MCPServer/Tools/: FlightTools.cs
src/AccedeSimple.Service/: AccedeSimple.Service.csproj  Endpoints.cs  Program.cs  appsettings.Development.json
src/AccedeSimple.Service/ProcessSteps/: ReceiptProcessingStep.cs
src/AccedeSimple.Service/Services/: ProcessService.cs
src/AccedeSimple.ServiceDefaults/: Extensions.cs
src/localguide/: main.py  pyproject.toml  telemetry.py
