[project]
name = "localguide"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai-slim[openai]>=0.2.3",
    "uvicorn>=0.34.2",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-openai-v2",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-exporter-otlp-proto-grpc",
    "azure-ai-inference[opentelemetry]"
]
